--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           
           <div class="project-info">
             <p class="featured-tag">Featured Project</p>
-            <h3>Line Following Robot</h3>
+            <h3>Power Monitoring Hub</h3>
             
             <div class="project-description">
               <p>An autonomous robot designed to follow a black line on a white surface. Utilizes infrared sensors for line detection and PID control for smooth tracking.</p>
