update B'Sc to B'Eng

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="education">
             <h3>Education</h3>
             <div class="education-card">
-              <h4>Bachelor of Science in Mechatronics Engineering</h4>
+              <h4>Bachelor of Engineering in Mechatronics Engineering</h4>
               <p>University of Port-Harcourt, Rivers-State, Nigeria</p>
               <p class="graduation">Expected Graduation: September 2027</p>
               <p class="coursework">Relevant Coursework:</p>
