--- a/index.html
+++ b/index.html
@@ -429,24 +429,24 @@
             </div>
           </div>
 
-          <!-- Smart Home Monitor Project -->
+          <!-- Smart Waste Bins Project -->
           <div class="project-card">
             <div class="project-image">
               <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Smart Home Monitor">
             </div>
             <div class="project-content">
-              <h3>Smart Home Monitor</h3>
-              <p>An ESP32-based home automation system that monitors temperature, humidity, and motion. Integrated with 433MHz receivers to communicate with wireless sensors throughout the home. Data is visualized through a web dashboard that allows remote monitoring and control of connected devices.</p>
+              <h3>AI Powered Smart Waste Bins</h3>
+              <p>An ESP32-based AI trash can system that detects waste levels, identifies trash types, and automates lid control. Integrated with ultrasonic sensors and a sorting engine for smart waste management. Data is visualized through a web dashboard that enables remote monitoring of bin status and activity.</p>
               
               <div class="project-tags">
                 <span class="project-tag">ESP32</span>
-                <span class="project-tag">Home Automation</span>
+                <span class="project-tag">AI</span>
                 <span class="project-tag">IoT</span>
                 <span class="project-tag">Sensors</span>
               </div>
               
               <div class="project-links">
-                <a href="#" class="button outline">
+                <a href="https://github.com/Ekemini-Udofia/AI-Powered-Smart-Waste-Bins" class="button outline" target="_blank" rel="noopener noreferrer">
                   <svg class="button-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0012 2z" />
                   </svg>
