--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
               <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Smart Home Monitor">
             </div>
             <div class="project-content">
-              <h3>AI Powered Smart Waste Bins</h3>
+              <h3>AI Powered Smart Waste Bin</h3>
               <p>An ESP32-based AI trash can system that detects waste levels, identifies trash types, and automates lid control. Integrated with ultrasonic sensors and a sorting engine for smart waste management. Data is visualized through a web dashboard that enables remote monitoring of bin status and activity.</p>
               
               <div class="project-tags">
