Update personal description in About Me section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           
           <div class="about-text">
             <p>
-              I'm an aspiring embedded systems engineer with a strong interest in robotics. I'm currently studying Mechatronics Engineering at the University of Port Harcourt, focusing on embedded systems and control theory.
+              I'm an embedded systems engineer with a strong interest in robotics. I'm currently studying Mechatronics Engineering at the University of Port Harcourt, focusing on embedded systems and control theory.
             </p>
             <p>
               I've worked on several robotics projects, from basic line-following robots to more advanced systems that incorporate computer vision. Through these experiences, I've strengthened my skills in C and C++ programming, PCB design, and microcontroller-based system development. I also have hands-on experience with platforms like Arduino, ESP32, STM32, and the Raspberry Pi Pico.
