Update skill name and level

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
               
               <div class="skill-item">
                 <div class="skill-header">
-                  <span class="skill-name">Raspberry Pi Pico</span>
-                  <span class="skill-level">4/5</span>
+                  <span class="skill-name">Raspberry Pi</span>
+                  <span class="skill-level">4.5/5</span>
                 </div>
                 <div class="progress-bar">
                   <div class="progress-fill" style="width: 80%"></div>
